# cupc

./: CMakeLists.txt  README.md
include/: check.h
t0_hello/: CMakeLists.txt  hello.cu
t10_offset/: offset.cu  offset_ca  offset_cg
t11_transformmat/: CMakeLists.txt  transformmat.cu
t12_uniform_memory_managed/: CMakeLists.txt  uniform_memory_managed.cu
t13_share_memory_read_data/: CMakeLists.txt  share_memory_read_data.cu
t1_check_dimension/: CMakeLists.txt  check_dimension.cu
t2_grid_block/: CMakeLists.txt  grid_block.cu
t3_sum_array/: CMakeLists.txt  sum_array.cu
t4_sum_mat/: CMakeLists.txt  sum_mat.cu
t5_reduceInteger/: CMakeLists.txt  reduceInteger.cu
t6_checkGlobalVariable/: CMakeLists.txt  checkGlobalVariable.cu
t7_pine_memory/: CMakeLists.txt  pine_memory.cu
t8_zero_copy_memory/: CMakeLists.txt  zero_copy_memory.cu
t9_UVA/: CMakeLists.txt  uva.cu
t_tid/: CMakeLists.txt  tid.cu
